[package]
name = "howoldisminecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.7"
serde = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.19"
chrono-humanize = "0.2.1"
mime = "0.3"

[dependencies.tokio]
version = "1.14"
features = ["full"]
